--- a/less-kit.less
+++ b/less-kit.less
@@ -1,4 +1,4 @@
-@include "mixins";
-@include "utils";
-@include "vendor-prefixes";
-@include "gradients";
+@import "mixins";
+@import "utils";
+@import "vendor-prefixes";
+@import "gradients";
