--- a/reset.less
+++ b/reset.less
@@ -46,3 +46,12 @@ table {
         border-collapse: collapse;
         border-spacing: 0;
 }
+
+a,
+a:hover,
+a:visited,
+a:active,
+a:focus {
+    text-decoration: none;
+    color: inherit;
+}
