Add Bold to Open Sans default

--- a/more.less
+++ b/more.less
@@ -1,7 +1,7 @@
-@import 'less-kit'
+@import 'kit'
 @import 'brands'
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 html {
     font-family: 'Open Sans', 'Helvetica', sans-serif;
