--- a/more.less
+++ b/more.less
@@ -1,5 +1,5 @@
-@import 'kit'
-@import 'brands'
+@import 'kit';
+@import 'brands';
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
